--- a/gamma/index.html
+++ b/gamma/index.html
@@ -130,7 +130,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading11">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse11" aria-expanded="false" aria-controls="collapse11">
-								<h5>TBA
+								<h5>A gentle introduction to <em>b</em>-symplectic geometry
 								<br>
 								Mikołaj Duch &#8213; 08/06/2023, 21:00</h5>
 							</button>
@@ -138,7 +138,7 @@
 						<div id="collapse11" class="accordion-collapse collapse" aria-labelledby="heading11" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>TBA</p>
+								<p>The world of vanishing vector fields and differential forms with blow-ups is intriguing. In this talk, we will use basic algebraic and geometric tools to enter it. In particular, notions such as $b$-manifolds and <em>b</em>-vector fields will be introduced and utilized to construct the <em>b</em>-tangent bundle. Once familiarized with the setting, we will inspect the singularities of the so-called $b$-forms. Since understanding their behavior is the main goal of the talk,  we will discuss them in detail. Finally, we will utilize this theory to describe a twin sister of symplectic geometry: the <em>b</em>-symplectic geometry.</p>
 							</div>
 						</div>
 					</div>
