--- a/gamma/tools/index.html
+++ b/gamma/tools/index.html
@@ -59,7 +59,7 @@
 
 			<div class="row">				
 
-				<h3 class="blue">&#9632; Tools</h3>
+				<h3 class="blue">&#9632; Toolkit</h3>
 				<ul class="ms-4">
 					<li>Latex dif: <a href="https://3142.nl/latex-diff/" target="_blank">https://3142.nl/latex-diff/</a></li>
 					<li>Detexify: <a href="https://detexify.kirelabs.org/classify.html" target="_blank">https://detexify.kirelabs.org/classify.html</a></li>
