--- a/gamma/index.html
+++ b/gamma/index.html
@@ -154,6 +154,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p>Over the last 50 years, fiber bundles have slowly but surely claimed their title as the optimal language for discussing field theories. However, many fundamental notions used in contemporary field theory stem from the work of Charles Ehresmann in the 1930s and 40s. Among them are jet bundles, a powerful construction allowing for an elegant generalization of the tangent space of a manifold. Jets describe equivalence classes of sections of a fiber bundle, extending the concept beyond one-parameter curves, typical for classical mechanics. My talk aims to introduce jet bundles and emphasize their extraordinary relationship with Ehresmann connections.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/41yij50PTlw' target="_blank">Tymon Frelik --- Jet bundles and Ehresmann connections</a>
 							</div>
 						</div>
 					</div>
