--- a/gamma/index.html
+++ b/gamma/index.html
@@ -138,7 +138,7 @@
 						<div id="collapse11" class="accordion-collapse collapse" aria-labelledby="heading11" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>The world of vanishing vector fields and differential forms with blow-ups is intriguing. In this talk, we will use basic algebraic and geometric tools to enter it. In particular, notions such as $b$-manifolds and <em>b</em>-vector fields will be introduced and utilized to construct the <em>b</em>-tangent bundle. Once familiarized with the setting, we will inspect the singularities of the so-called $b$-forms. Since understanding their behavior is the main goal of the talk,  we will discuss them in detail. Finally, we will utilize this theory to describe a twin sister of symplectic geometry: the <em>b</em>-symplectic geometry.</p>
+								<p>The world of vanishing vector fields and differential forms with blow-ups is intriguing. In this talk, we will use basic algebraic and geometric tools to enter it. In particular, notions such as <em>b</em>-manifolds and <em>b</em>-vector fields will be introduced and utilized to construct the <em>b</em>-tangent bundle. Once familiarized with the setting, we will inspect the singularities of the so-called <em>b</em>-forms. Since understanding their behavior is the main goal of the talk,  we will discuss them in detail. Finally, we will utilize this theory to describe a twin sister of symplectic geometry: the <em>b</em>-symplectic geometry.</p>
 							</div>
 						</div>
 					</div>
