--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 					<li class='mb-2'>X. Rivas, M. Salgado and S. Souto, "Some contributions to <em>k</em>-contact Lagrangian field equations, symmetries and dissipation laws". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2304.00833" target="_blank">2304.00833</a></li>
 
-					<li class='mb-2'>J. de Lucas, X. Rivas, S. Vilariño and B. M. Zawora, "A <em>k</em>-polycosymplectic Marsden&ndash;Weinstein reduction". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2302.09037" target="_blank">2302.09037</a></li>
+					<li class='mb-2'>J. de Lucas, X. Rivas, S. Vilariño and B. M. Zawora, "A <em>k</em>-polycosymplectic Marsden&ndash;Weinstein reduction". <em>J. Geom. Phys. (to appear)</em> arxiv: <a href="https://arxiv.org/abs/2302.09037" target="_blank">2302.09037</a></li>
 
 					<li class='mb-2'>J. Gaset, A. López-Gordón and X. Rivas, "Symmetries, conservation and dissipation in time-dependent contact systems". <em>Fortschritte der Phys.</em> (to appear) arxiv: <a href="https://arxiv.org/abs/2212.14848" target="_blank">2212.14848</a> doi: <a href="https://doi.org/10.1002/prop.202300048" target="_blank">10.1002/prop.202300048</a></li>
 
@@ -88,7 +88,7 @@
 					
 					<li class='mb-2'>M. de León, M. Lainz, A. López-Gordón and X. Rivas, "Hamilton&ndash;Jacobi theory and integrability for autonomous and non-autonomous contact systems". <em>J. Geom. Phys.</em> <strong>187</strong>:104787, 2023. arxiv: <a href="https://arxiv.org/abs/2208.07436" target="_blank">2208.07436</a> doi: <a href="https://doi.org/10.1016/j.geomphys.2023.104787" target="_blank">10.1016/j.geomphys.2023.104787</a></li>
 
-					<li class='mb-2'>J. de Lucas and X. Rivas, "Contact Lie systems: theory and applications". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2207.04038" target="_blank">2207.04038</a></li>
+					<li class='mb-2'>J. de Lucas and X. Rivas, "Contact Lie systems: theory and applications". <em>J. Phys. A: Math. Theor. (to appear)</em> arxiv: <a href="https://arxiv.org/abs/2207.04038" target="_blank">2207.04038</a></li>
 
 					<li class='mb-2'>X. Rivas and D. Torres, "Lagrangian&ndash;Hamiltonian formalism for cocontact systems". <em>J. Geom. Mech.</em> <strong>15</strong>(1):1-26, 2023. arxiv: <a href="https://arxiv.org/abs/2205.14757" target="_blank">2205.14757</a> doi: <a href="https://doi.org/10.3934/jgm.2023001" target="_blank">10.3934/jgm.2023001</a></li>
 
