--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 					<li class='mb-2'>X. Rivas, M. Salgado and S. Souto, "Some contributions to <em>k</em>-contact Lagrangian field equations, symmetries and dissipation laws". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2304.00833" target="_blank">2304.00833</a></li>
 
-					<li class='mb-2'>J. de Lucas, X. Rivas, S. Vilariño and B. M. Zawora, "A <em>k</em>-polycosymplectic Marsden&ndash;Weinstein reduction". <em>J. Geom. Phys. (to appear)</em> arxiv: <a href="https://arxiv.org/abs/2302.09037" target="_blank">2302.09037</a></li>
+					<li class='mb-2'>J. de Lucas, X. Rivas, S. Vilariño and B. M. Zawora, "On <em>k</em>-polycosymplectic Marsden&ndash;Weinstein reductions". <em>J. Geom. Phys. (to appear)</em> arxiv: <a href="https://arxiv.org/abs/2302.09037" target="_blank">2302.09037</a></li>
 
 					<li class='mb-2'>J. Gaset, A. López-Gordón and X. Rivas, "Symmetries, conservation and dissipation in time-dependent contact systems". <em>Fortschritte der Phys.</em> (to appear) arxiv: <a href="https://arxiv.org/abs/2212.14848" target="_blank">2212.14848</a> doi: <a href="https://doi.org/10.1002/prop.202300048" target="_blank">10.1002/prop.202300048</a></li>
 
