--- a/gamma/index.html
+++ b/gamma/index.html
@@ -139,6 +139,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p>The world of vanishing vector fields and differential forms with blow-ups is intriguing. In this talk, we will use basic algebraic and geometric tools to enter it. In particular, notions such as <em>b</em>-manifolds and <em>b</em>-vector fields will be introduced and utilized to construct the <em>b</em>-tangent bundle. Once familiarized with the setting, we will inspect the singularities of the so-called <em>b</em>-forms. Since understanding their behavior is the main goal of the talk,  we will discuss them in detail. Finally, we will utilize this theory to describe a twin sister of symplectic geometry: the <em>b</em>-symplectic geometry.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/ZvLMfIOc6wo' target="_blank">Mikołaj Duch --- A gentle introduction to <em>b</em>-symplectic geometry</a>
 							</div>
 						</div>
 					</div>
