--- a/gamma/index.html
+++ b/gamma/index.html
@@ -56,7 +56,7 @@
 
 
 				<div class="col-12">
-					<p class='lead'>The <strong>Geometry and Applications: Modern Mathematical Approaches (Gamma) Seminar</strong> is a weekly online seminar aimed at discussing basic and advanced research topics conducted by the Polish-Spanish geometric group gathering people from the University of Warsaw, the International University of La Rioja, the Polytechnic University of Madrid, ICMAT, and the Polytechnic University of Catalonia.</p>
+					<p class='lead text-justify'>The <strong>Geometry and Applications: Modern Mathematical Approaches (Gamma) Seminar</strong> is a weekly online seminar aimed at discussing basic and advanced research topics conducted by the Polish-Spanish geometric group gathering people from the University of Warsaw, the International University of La Rioja, the Polytechnic University of Madrid, ICMAT, and the Polytechnic University of Catalonia.</p>
 					<p class='lead'><strong>e-mail:</strong> gamma.seminar(at)gmail.com</p>
 				</div>
 			</div>
