--- a/gamma/index.html
+++ b/gamma/index.html
@@ -108,7 +108,7 @@
 						<div id="collapse13" class="accordion-collapse collapse" aria-labelledby="heading13" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>TBA</p>
+								<p class="text-justify">TBA</p>
 							</div>
 						</div>
 					</div>
@@ -123,7 +123,7 @@
 						<div id="collapse12" class="accordion-collapse collapse" aria-labelledby="heading12" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>TBA</p>
+								<p class="text-justify">TBA</p>
 							</div>
 						</div>
 					</div>
@@ -138,7 +138,7 @@
 						<div id="collapse11" class="accordion-collapse collapse" aria-labelledby="heading11" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>The world of vanishing vector fields and differential forms with blow-ups is intriguing. In this talk, we will use basic algebraic and geometric tools to enter it. In particular, notions such as <em>b</em>-manifolds and <em>b</em>-vector fields will be introduced and utilized to construct the <em>b</em>-tangent bundle. Once familiarized with the setting, we will inspect the singularities of the so-called <em>b</em>-forms. Since understanding their behavior is the main goal of the talk,  we will discuss them in detail. Finally, we will utilize this theory to describe a twin sister of symplectic geometry: the <em>b</em>-symplectic geometry.</p>
+								<p class="text-justify">The world of vanishing vector fields and differential forms with blow-ups is intriguing. In this talk, we will use basic algebraic and geometric tools to enter it. In particular, notions such as <em>b</em>-manifolds and <em>b</em>-vector fields will be introduced and utilized to construct the <em>b</em>-tangent bundle. Once familiarized with the setting, we will inspect the singularities of the so-called <em>b</em>-forms. Since understanding their behavior is the main goal of the talk,  we will discuss them in detail. Finally, we will utilize this theory to describe a twin sister of symplectic geometry: the <em>b</em>-symplectic geometry.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/ZvLMfIOc6wo' target="_blank">Mikołaj Duch --- A gentle introduction to <em>b</em>-symplectic geometry</a>
 							</div>
 						</div>
@@ -154,7 +154,7 @@
 						<div id="collapse10" class="accordion-collapse collapse" aria-labelledby="heading10" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>Over the last 50 years, fiber bundles have slowly but surely claimed their title as the optimal language for discussing field theories. However, many fundamental notions used in contemporary field theory stem from the work of Charles Ehresmann in the 1930s and 40s. Among them are jet bundles, a powerful construction allowing for an elegant generalization of the tangent space of a manifold. Jets describe equivalence classes of sections of a fiber bundle, extending the concept beyond one-parameter curves, typical for classical mechanics. My talk aims to introduce jet bundles and emphasize their extraordinary relationship with Ehresmann connections.</p>
+								<p class="text-justify">Over the last 50 years, fiber bundles have slowly but surely claimed their title as the optimal language for discussing field theories. However, many fundamental notions used in contemporary field theory stem from the work of Charles Ehresmann in the 1930s and 40s. Among them are jet bundles, a powerful construction allowing for an elegant generalization of the tangent space of a manifold. Jets describe equivalence classes of sections of a fiber bundle, extending the concept beyond one-parameter curves, typical for classical mechanics. My talk aims to introduce jet bundles and emphasize their extraordinary relationship with Ehresmann connections.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/41yij50PTlw' target="_blank">Tymon Frelik --- Jet bundles and Ehresmann connections</a>
 							</div>
 						</div>
@@ -170,7 +170,7 @@
 						<div id="collapse9" class="accordion-collapse collapse" aria-labelledby="heading9" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>In this presentation, I will provide the fundamental overview of Lyapunov stability theory, which has broad applications in control theory and physics. I will begin by defining the equilibrium point of a non-autonomous system of ordinary differential equations and proceed to the classification of the stability of equilibrium points. Throughout my talk, I will show illustrative examples to demonstrate the different types of stability. In the end, I will introduce tools that enable the study of the behaviour of a system close to an equilibrium point without the need to solve, often highly complex, differential equations.</p>
+								<p class="text-justify">In this presentation, I will provide the fundamental overview of Lyapunov stability theory, which has broad applications in control theory and physics. I will begin by defining the equilibrium point of a non-autonomous system of ordinary differential equations and proceed to the classification of the stability of equilibrium points. Throughout my talk, I will show illustrative examples to demonstrate the different types of stability. In the end, I will introduce tools that enable the study of the behaviour of a system close to an equilibrium point without the need to solve, often highly complex, differential equations.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/FQ3No3koByc' target="_blank">Bartosz M. Zawora --- Basics on Lyapunov stability</a>
 							</div>
 						</div>
@@ -186,7 +186,7 @@
 						<div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>The circular restricted three body problem studies the movement of a free particle subject to the gravitational attraction of two massive bodies moving in circular orbits around their common center of mass. In this talk we will construct the model and analyze some dynamical properties like the existence of fixed points and their stability. Thanks to the dynamical comprehension of the problem, we will be able to explain why we can find Troyan asteroids as well as to justify the location of James Webb Telescope at approximately 1.5 million kilometers from the Earth. We will end the talk explaining how these simplified dynamics can help to save fuel in space travels.</p>
+								<p class="text-justify">The circular restricted three body problem studies the movement of a free particle subject to the gravitational attraction of two massive bodies moving in circular orbits around their common center of mass. In this talk we will construct the model and analyze some dynamical properties like the existence of fixed points and their stability. Thanks to the dynamical comprehension of the problem, we will be able to explain why we can find Troyan asteroids as well as to justify the location of James Webb Telescope at approximately 1.5 million kilometers from the Earth. We will end the talk explaining how these simplified dynamics can help to save fuel in space travels.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/tJNFtdvH_iI' target="_blank">Daniel Pérez-Palau --- The space: when three is a crowd</a>
 							</div>
 						</div>
@@ -202,7 +202,7 @@
 						<div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>In this talk, I will discuss the concept of completely integrable system. The Liouville–Arnold theorem and the main ideas of its proof will be presented, along with several illustrative examples. Additionally, I will mention the relationship between action-angle coordinates and the Hamilton–Jacobi equation, as well as the Kolmogorov–Arnold–Moser theory.</p>
+								<p class="text-justify">In this talk, I will discuss the concept of completely integrable system. The Liouville–Arnold theorem and the main ideas of its proof will be presented, along with several illustrative examples. Additionally, I will mention the relationship between action-angle coordinates and the Hamilton–Jacobi equation, as well as the Kolmogorov–Arnold–Moser theory.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/y1-vfiHdF00' target="_blank">Asier López-Gordón --- An introduction to integrable systems</a>
 							</div>
 						</div>
@@ -218,7 +218,7 @@
 						<div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>Field theories, like Maxwell's or Einstein's equations, require a generalization of symplectic and cosymplectic geometry. In this session we will explore the geometry of field theories, showing the differences with respect to mechanics. We will define some of the most common geometric objects in field theories: the jet bundle and multisymplectic forms.</p>
+								<p class="text-justify">Field theories, like Maxwell's or Einstein's equations, require a generalization of symplectic and cosymplectic geometry. In this session we will explore the geometry of field theories, showing the differences with respect to mechanics. We will define some of the most common geometric objects in field theories: the jet bundle and multisymplectic forms.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/YJNQgc4aAVs' target="_blank">Jordi Gaset --- The geometry of field theories</a>
 							</div>
 						</div>
@@ -234,7 +234,7 @@
 						<div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>This talk, divided into two parts, is intended to be an introduction to mechanics on symplectic manifolds, both in the Hamiltonian and Lagrangian formalisms. We will start by reviewing some basic results on symplectic geometry and Hamiltonian systems, and introducing some concepts about symmetries of Hamiltonian systems and Noether's theorem. Then, we will see how to obtain a symplectic structure on the tangent bundle of the configuration space of a mechanical system from a Lagrangian function. In the second part of the talk we will cover two geometric formulations for time-dependent systems using cosymplectic and contact geometry. Throughout the talk, some examples will be used to illustrate the theory.</p>
+								<p class="text-justify">This talk, divided into two parts, is intended to be an introduction to mechanics on symplectic manifolds, both in the Hamiltonian and Lagrangian formalisms. We will start by reviewing some basic results on symplectic geometry and Hamiltonian systems, and introducing some concepts about symmetries of Hamiltonian systems and Noether's theorem. Then, we will see how to obtain a symplectic structure on the tangent bundle of the configuration space of a mechanical system from a Lagrangian function. In the second part of the talk we will cover two geometric formulations for time-dependent systems using cosymplectic and contact geometry. Throughout the talk, some examples will be used to illustrate the theory.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/e-HGSB7rX04' target="_blank">Xavier Rivas --- Symplectic mechanics (part 2)</a>
 							</div>
 						</div>
@@ -250,7 +250,7 @@
 						<div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>This talk, divided into two parts, is intended to be an introduction to mechanics on symplectic manifolds, both in the Hamiltonian and Lagrangian formalisms. We will start by reviewing some basic results on symplectic geometry and Hamiltonian systems, and introducing some concepts about symmetries of Hamiltonian systems and Noether's theorem. Then, we will see how to obtain a symplectic structure on the tangent bundle of the configuration space of a mechanical system from a Lagrangian function. In the second part of the talk we will cover two geometric formulations for time-dependent systems using cosymplectic and contact geometry. Throughout the talk, some examples will be used to illustrate the theory.</p>
+								<p class="text-justify">This talk, divided into two parts, is intended to be an introduction to mechanics on symplectic manifolds, both in the Hamiltonian and Lagrangian formalisms. We will start by reviewing some basic results on symplectic geometry and Hamiltonian systems, and introducing some concepts about symmetries of Hamiltonian systems and Noether's theorem. Then, we will see how to obtain a symplectic structure on the tangent bundle of the configuration space of a mechanical system from a Lagrangian function. In the second part of the talk we will cover two geometric formulations for time-dependent systems using cosymplectic and contact geometry. Throughout the talk, some examples will be used to illustrate the theory.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/rFEslNLQfv4' target="_blank">Xavier Rivas --- Symplectic mechanics (part 1)</a>
 							</div>
 						</div>
@@ -266,7 +266,7 @@
 						<div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>This talk, divided into three parts, is mostly aimed at explaining fundamental facts on symplectic geometry, the Marsden-Weinstein-Meyer reduction theorem, and their applications in Physics. I will try to provide some not very well-known facts to make to talk more interesting to those knowing the theory, while keeping it simple for beginners. Facts about modern research problems concerning the Marsden-Weinstein-Meyer theorem will be detailed.</p>
+								<p class="text-justify">This talk, divided into three parts, is mostly aimed at explaining fundamental facts on symplectic geometry, the Marsden-Weinstein-Meyer reduction theorem, and their applications in Physics. I will try to provide some not very well-known facts to make to talk more interesting to those knowing the theory, while keeping it simple for beginners. Facts about modern research problems concerning the Marsden-Weinstein-Meyer theorem will be detailed.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/WmHWireq0GQ' target="_blank">Javier de Lucas --- Basics on symplectic geometry and Marsden-Weinstein reduction (part 3)</a>
 							</div>
 						</div>
@@ -282,7 +282,7 @@
 						<div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>This talk, divided into three parts, is mostly aimed at explaining fundamental facts on symplectic geometry, the Marsden-Weinstein-Meyer reduction theorem, and their applications in Physics. I will try to provide some not very well-known facts to make to talk more interesting to those knowing the theory, while keeping it simple for beginners. Facts about modern research problems concerning the Marsden-Weinstein-Meyer theorem will be detailed.</p>
+								<p class="text-justify">This talk, divided into three parts, is mostly aimed at explaining fundamental facts on symplectic geometry, the Marsden-Weinstein-Meyer reduction theorem, and their applications in Physics. I will try to provide some not very well-known facts to make to talk more interesting to those knowing the theory, while keeping it simple for beginners. Facts about modern research problems concerning the Marsden-Weinstein-Meyer theorem will be detailed.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/963H8MsFROM' target="_blank">Javier de Lucas --- Basics on symplectic geometry and Marsden-Weinstein reduction (part 2)</a>
 							</div>
 						</div>
@@ -298,7 +298,7 @@
 						<div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>This talk, divided into three parts, is mostly aimed at explaining fundamental facts on symplectic geometry, the Marsden-Weinstein-Meyer reduction theorem, and their applications in Physics. I will try to provide some not very well-known facts to make to talk more interesting to those knowing the theory, while keeping it simple for beginners. Facts about modern research problems concerning the Marsden-Weinstein-Meyer theorem will be detailed.</p>
+								<p class="text-justify">This talk, divided into three parts, is mostly aimed at explaining fundamental facts on symplectic geometry, the Marsden-Weinstein-Meyer reduction theorem, and their applications in Physics. I will try to provide some not very well-known facts to make to talk more interesting to those knowing the theory, while keeping it simple for beginners. Facts about modern research problems concerning the Marsden-Weinstein-Meyer theorem will be detailed.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/cDzFSQAYMZ4' target="_blank">Javier de Lucas --- Basics on symplectic geometry and Marsden-Weinstein reduction (part 1)</a>
 							</div>
 						</div>
