--- a/gamma/index.html
+++ b/gamma/index.html
@@ -115,7 +115,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading12">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse12" aria-expanded="false" aria-controls="collapse12">
-								<h5>TBA
+								<h5>An invitation to superalgebra
 								<br>
 								Javier de Lucas &#8213; 15/06/2023, 21:00</h5>
 							</button>
@@ -123,7 +123,7 @@
 						<div id="collapse12" class="accordion-collapse collapse" aria-labelledby="heading12" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p class="text-justify">TBA</p>
+								<p class="text-justify">I will introduce the concept of category and related notions at a basic level. Then, I will use them to present superalgebra structures, in particular, linear ones. More specifically, I will explain the theory of superspaces and their morphisms, superrings, superderivations, supermodules and their supermorphisms, which will lead to supermatrices, etc. I will apply some of these techniques to explain differential geometric structures and their properties.</p>
 							</div>
 						</div>
 					</div>
