--- a/bib/index.html
+++ b/bib/index.html
@@ -33,7 +33,7 @@
 
 
 			<div class='modal-body mt-3 mb-6'> 
-				<iframe src="./references.bib" width="100%" height="700px"></iframe>
+				<iframe src="https://xavirivas.com/bib/references.bib" width="100%" height="700px"></iframe>
 			</div>
 
 		</div>
