--- a/bib/index.html
+++ b/bib/index.html
@@ -29,12 +29,13 @@
 		<div class="container mt-4">
 			<h1 class="h1 blue name">References</h1>
 			<br>
-			<a class="btn btn-primary" href="./references.bib" role="button" target="_blank">Download bibtex file</a>
+			<a class="btn btn-primary" href="references.bib" role="button" target="_blank">Download bibtex file</a>
 
 
-			<div class='modal-body mt-3 mb-6'> 
-				<iframe src="https://xavirivas.com/bib/references.bib" width="100%" height="700px"></iframe>
+			<div class='mt-3 mb-6'> 
+				<embed src="references.bib" width="100%" height="700px"></embed>
 			</div>
+
 
 		</div>
 
