--- a/bib/index.html
+++ b/bib/index.html
@@ -27,13 +27,17 @@
 	<body>
 
 		<div class="container mt-4">
-			<h1 class="h1 blue name">References</h1>
+			<h1 class="h1 blue name">References amb object</h1>
 			<br>
 			<a class="btn btn-primary" href="references.bib" role="button" target="_blank">Download bibtex file</a>
 
 
-			<div class='mt-3 mb-6'> 
+			<!-- <div class='mt-3 mb-6'> 
 				<embed src="references.bib" width="100%" height="700px"></embed>
+			</div> -->
+
+			<div class='mt-3 mb-6'> 
+				<object data="references.bib" width="100%" height="700px"></object>
 			</div>
 
 
