--- a/bib/index.html
+++ b/bib/index.html
@@ -27,9 +27,9 @@
 	<body>
 
 		<div class="container mt-4">
-			<h1 class="h1 blue name">References amb object</h1>
+			<h1 class="h1 blue name">References amb txt</h1>
 			<br>
-			<a class="btn btn-primary" href="references.bib" role="button" target="_blank">Download bibtex file</a>
+			<a class="btn btn-primary" href="references.txt" role="button" target="_blank">Download bibtex file</a>
 
 
 			<!-- <div class='mt-3 mb-6'> 
@@ -37,7 +37,7 @@
 			</div> -->
 
 			<div class='mt-3 mb-6'> 
-				<object data="references.bib" width="100%" height="700px"></object>
+				<object data="references.txt" width="100%" height="700px"></object>
 			</div>
 
 
