--- a/bib/index.html
+++ b/bib/index.html
@@ -27,23 +27,18 @@
 	<body>
 
 		<div class="container mt-4">
-			<h1 class="h1 blue name">References amb txt</h1>
+			<h1 class="h1 blue name">References</h1>
 			<br>
 			<a class="btn btn-primary" href="references.txt" role="button" target="_blank">Download bibtex file</a>
 
-
-			<!-- <div class='mt-3 mb-6'> 
-				<embed src="references.bib" width="100%" height="700px"></embed>
-			</div> -->
-
 			<div class='mt-3 mb-6'> 
-				<object data="references.txt" width="100%" height="700px"></object>
+				<object data="references.txt" width="100%" height="600px"></object>
 			</div>
 
 
 		</div>
 
-		<footer class="container-fluid footer mt-5"></footer>
+		<!-- <footer class="container-fluid footer mt-5"></footer> -->
 
 		<!-- Option 1: Bootstrap Bundle with Popper -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
