--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 					<li class='mb-2'>X. Rivas and D. Torres, "Lagrangian&ndash;Hamiltonian formalism for cocontact systems". <em>J. Geom. Mech.</em> <strong>15</strong>(1):1-26, 2023. arxiv: <a href="https://arxiv.org/abs/2205.14757" target="_blank">2205.14757</a> doi: <a href="https://doi.org/10.3934/jgm.2023001" target="_blank">10.3934/jgm.2023001</a></li>
 
-					<li class='mb-2'>M. de León, J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda and X. Rivas, "Time-dependent contact mechanics". <em>Monatsh. Math.</em>, 2022. arxiv: <a href="https://arxiv.org/abs/2205.09454" target="_blank">2205.09454</a> doi: <a href="https://doi.org/10.1007/s00605-022-01767-1" target="_blank">10.1007/s00605-022-01767-1</a></li>
+					<li class='mb-2'>M. de León, J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda and X. Rivas, "Time-dependent contact mechanics". <em>Monatsh. Math.</em> <strong>201</strong>:1149-1183, 2023. arxiv: <a href="https://arxiv.org/abs/2205.09454" target="_blank">2205.09454</a> doi: <a href="https://doi.org/10.1007/s00605-022-01767-1" target="_blank">10.1007/s00605-022-01767-1</a></li>
 
 					<li class='mb-2'>J. de Lucas, X. Gràcia, X. Rivas, N. Román-Roy and S. Vilariño, "Reduction and reconstruction of multisymplectic Lie systems". <em>J. Phys. A: Math. Theor.</em> <strong>55</strong>(29):295204, 2022. arxiv: <a href="https://arxiv.org/abs/2202.13748" target="_blank">2202.13748</a> doi: <a href="http://dx.doi.org/10.1088/1751-8121/ac78ab" target="_blank">10.1088/1751-8121/ac78ab</a></li>
 
