--- a/gamma/index.html
+++ b/gamma/index.html
@@ -100,7 +100,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading13">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13">
-								<h5>TBA
+								<h5>Slicing of Hamiltonian systems
 								<br>
 								Julia Lange &#8213; 22/06/2023, 21:00</h5>
 							</button>
@@ -108,7 +108,7 @@
 						<div id="collapse13" class="accordion-collapse collapse" aria-labelledby="heading13" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p class="text-justify">TBA</p>
+								<p class="text-justify">In this talk, I will discuss briefly the Hamilton-Jacobi theory. In short, a complete solution to the Hamilton-Jacobi equation gives rise to a family of first-order differential equations on the configuration space, which are sufficient to recover all the solutions to Hamilton’s equation on the respective cotangent space. The Hamilton-Jacobi problem may be analyzed by introducing the concept of slicing vector fields and complete slicings in this context. After introducing all required details, I will discuss Hamiltonian systems defined on symplectic manifolds derived from this general framework.</p>
 							</div>
 						</div>
 					</div>
