--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<dd class="col-sm-10"><a href="https://arxiv.org/a/rivas_x_1.html" target="_blank">arxiv.org</a><br>
 						<a href="https://www.researchgate.net/profile/Xavier-Rivas-2" target="_blank">ResearchGate</a><br>
 						<a href="https://scholar.google.es/citations?user=MyVZoPMAAAAJ" target="_blank">Google Scholar</a><br>
-						<a href="https://publons.com/researcher/4705307/xavier-rivas/" target="_blank">ResearcherID</a><br>
+						<a href="https://www.webofscience.com/wos/author/record/32901988" target="_blank">Web Of Science</a><br>
 						<a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1375865" target="_blank">MathSciNet</a><br>
 						<a href="https://www.scopus.com/authid/detail.uri?authorId=57215094927" target="_blank">Scopus</a><br>
 						<a href="https://www.zotero.org/xrivas" target="_blank">Zotero</a></dd>
