--- a/gamma/index.html
+++ b/gamma/index.html
@@ -98,14 +98,14 @@
 
 				<div class="accordion" id="accordionExample">
 					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading13">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13">
+						<h3 class="accordion-header" id="heading14">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse14" aria-expanded="false" aria-controls="collapse14">
 								<h5>Slicing of Hamiltonian systems
 								<br>
-								Julia Lange &#8213; 22/06/2023, 21:00</h5>
+								Julia Lange &#8213; 29/06/2023, 21:00</h5>
 							</button>
 						</h3>
-						<div id="collapse13" class="accordion-collapse collapse" aria-labelledby="heading13" data-bs-parent="#accordionExample">
+						<div id="collapse14" class="accordion-collapse collapse" aria-labelledby="heading14" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">In this talk, I will discuss briefly the Hamilton-Jacobi theory. In short, a complete solution to the Hamilton-Jacobi equation gives rise to a family of first-order differential equations on the configuration space, which are sufficient to recover all the solutions to Hamilton’s equation on the respective cotangent space. The Hamilton-Jacobi problem may be analyzed by introducing the concept of slicing vector fields and complete slicings in this context. After introducing all required details, I will discuss Hamiltonian systems defined on symplectic manifolds derived from this general framework.</p>
@@ -113,9 +113,24 @@
 						</div>
 					</div>
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading13">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13">
+								<h5>An invitation to superalgebra II
+								<br>
+								Javier de Lucas &#8213; 22/06/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse13" class="accordion-collapse collapse" aria-labelledby="heading13" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">I will introduce the concept of category and related notions at a basic level. Then, I will use them to present superalgebra structures, in particular, linear ones. More specifically, I will explain the theory of superspaces and their morphisms, superrings, superderivations, supermodules and their supermorphisms, which will lead to supermatrices, etc. I will apply some of these techniques to explain differential geometric structures and their properties.</p>
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading12">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse12" aria-expanded="false" aria-controls="collapse12">
-								<h5>An invitation to superalgebra
+								<h5>An invitation to superalgebra I
 								<br>
 								Javier de Lucas &#8213; 15/06/2023, 21:00</h5>
 							</button>
@@ -124,6 +139,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">I will introduce the concept of category and related notions at a basic level. Then, I will use them to present superalgebra structures, in particular, linear ones. More specifically, I will explain the theory of superspaces and their morphisms, superrings, superderivations, supermodules and their supermorphisms, which will lead to supermatrices, etc. I will apply some of these techniques to explain differential geometric structures and their properties.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/j_Ry9TnlLJ0' target="_blank">Javier de Lucas --- An invitation to superalgebra I</a>
 							</div>
 						</div>
 					</div>
