--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 				<h5>List of publications:</h5>
 				<ol reversed class="ms-4">
 
+					<li class='mb-2'>X. Gràcia, J. de Lucas, X. Rivas and X. Rivas, "On Darboux theorems for geometric structures induced by closed forms". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2306.08556" target="_blank">2306.08556</a></li>
+
 					<li class='mb-2'>X. Rivas, M. Salgado and S. Souto, "Some contributions to <em>k</em>-contact Lagrangian field equations, symmetries and dissipation laws". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2304.00833" target="_blank">2304.00833</a></li>
 
 					<li class='mb-2'>J. de Lucas, X. Rivas, S. Vilariño and B. M. Zawora, "On <em>k</em>-polycosymplectic Marsden&ndash;Weinstein reductions". <em>J. Geom. Phys. (to appear)</em> arxiv: <a href="https://arxiv.org/abs/2302.09037" target="_blank">2302.09037</a></li>
