--- a/bib/index.html
+++ b/bib/index.html
@@ -10,7 +10,7 @@
 
 		<link rel="stylesheet" type="text/css" href="./../css/style.css">
 
-		<link rel="icon" type="image/x-icon" href="img/x.png">
+		<link rel="icon" type="image/x-icon" href="../img/x.png">
 
 		<title>Bibtex &ndash; Xavier Rivas</title>
 
