--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
 					<li class='mb-2'>X. Rivas, M. Salgado and S. Souto, "Some contributions to <em>k</em>-contact Lagrangian field equations, symmetries and dissipation laws". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2304.00833" target="_blank">2304.00833</a></li>
 
-					<li class='mb-2'>J. de Lucas, X. Rivas, S. Vilariño and B. M. Zawora, "On <em>k</em>-polycosymplectic Marsden&ndash;Weinstein reductions". <em>J. Geom. Phys.</em> :104899, 2023. arxiv: <a href="https://arxiv.org/abs/2302.09037" target="_blank">2302.09037</a> doi: <a href="https://doi.org/10.1016/j.geomphys.2023.104899" target="_blank">10.1016/j.geomphys.2023.104899</a></li>
+					<li class='mb-2'>J. de Lucas, X. Rivas, S. Vilariño and B. M. Zawora, "On <em>k</em>-polycosymplectic Marsden&ndash;Weinstein reductions". <em>J. Geom. Phys.</em> <strong>191</strong>:104899, 2023. arxiv: <a href="https://arxiv.org/abs/2302.09037" target="_blank">2302.09037</a> doi: <a href="https://doi.org/10.1016/j.geomphys.2023.104899" target="_blank">10.1016/j.geomphys.2023.104899</a></li>
 
-					<li class='mb-2'>J. Gaset, A. López-Gordón and X. Rivas, "Symmetries, conservation and dissipation in time-dependent contact systems". <em>Fortschritte der Phys.</em>, 2023. arxiv: <a href="https://arxiv.org/abs/2212.14848" target="_blank">2212.14848</a> doi: <a href="https://doi.org/10.1002/prop.202300048" target="_blank">10.1002/prop.202300048</a></li>
+					<li class='mb-2'>J. Gaset, A. López-Gordón and X. Rivas, "Symmetries, conservation and dissipation in time-dependent contact systems". <em>Fortschr. Phys.</em> :2300048, 2023. arxiv: <a href="https://arxiv.org/abs/2212.14848" target="_blank">2212.14848</a> doi: <a href="https://doi.org/10.1002/prop.202300048" target="_blank">10.1002/prop.202300048</a></li>
 
 					<li class='mb-2'>J. Gaset, M. Lainz, A. Mas and X. Rivas, "The Herglotz variational principle for dissipative field theories". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2211.17058" target="_blank">2211.17058</a></li>
 
@@ -100,7 +100,7 @@
 
 					<li class='mb-2'>X. Gràcia, X. Rivas and N. Román-Roy, "Skinner&ndash;Rusk formalism for <em>k</em>-contact systems". <em>J. Geom. Phys.</em> <strong>172</strong>:104429, 2022. arxiv: <a href="https://arxiv.org/abs/2109.07257" target="_blank">2109.07257</a> doi: <a href="https://doi.org/10.1016/j.geomphys.2021.104429" target="_blank">10.1016/j.geomphys.2021.104429</a></li>
 
-					<li class='mb-2'>M. de León, J. Gaset, M. Lainz-Valcázar, X. Rivas and N. Román-Roy, "Unified Lagrangian-Hamiltonian formalism for contact systems". <em>Fortschritte der Phys.</em> <strong>68</strong> (8):2000045, 2020. arxiv: <a href="https://arxiv.org/abs/2003.13037" target="_blank">2003.13037</a> doi: <a href="https://doi.org/10.1002/prop.202000045" target="_blank">10.1002/prop.202000045</a></li>
+					<li class='mb-2'>M. de León, J. Gaset, M. Lainz-Valcázar, X. Rivas and N. Román-Roy, "Unified Lagrangian-Hamiltonian formalism for contact systems". <em>Fortschr. Phys.</em> <strong>68</strong> (8):2000045, 2020. arxiv: <a href="https://arxiv.org/abs/2003.13037" target="_blank">2003.13037</a> doi: <a href="https://doi.org/10.1002/prop.202000045" target="_blank">10.1002/prop.202000045</a></li>
 
 					<li class='mb-2'>J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "A <em>k</em>-contact Lagrangian formulation for nonconservative field theories". <em>Rep. Math. Phys.</em>, <strong>87</strong> (3):347-368, 2021. arxiv: <a href="https://arxiv.org/abs/2002.10458" target="_blank">2002.10458</a> doi: <a href="https://doi.org/10.1016/S0034-4877(21)00041-0" target="_blank">10.1016/S0034-4877(21)00041-0</a></li>
 
