--- a/gamma/index.html
+++ b/gamma/index.html
@@ -124,6 +124,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">I will introduce the concept of category and related notions at a basic level. Then, I will use them to present superalgebra structures, in particular, linear ones. More specifically, I will explain the theory of superspaces and their morphisms, superrings, superderivations, supermodules and their supermorphisms, which will lead to supermatrices, etc. I will apply some of these techniques to explain differential geometric structures and their properties.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/aC_Nl3KRvNM' target="_blank">Javier de Lucas --- An invitation to superalgebra II</a>
 							</div>
 						</div>
 					</div>
