--- a/gamma/index.html
+++ b/gamma/index.html
@@ -110,6 +110,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">In this talk, I will discuss briefly the Hamilton-Jacobi theory. In short, a complete solution to the Hamilton-Jacobi equation gives rise to a family of first-order differential equations on the configuration space, which are sufficient to recover all the solutions to Hamilton’s equation on the respective cotangent space. The Hamilton-Jacobi problem may be analyzed by introducing the concept of slicing vector fields and complete slicings in this context. After introducing all required details, I will discuss Hamiltonian systems defined on symplectic manifolds derived from this general framework.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/Xgs2YiYoLsg' target="_blank">Julia Lange --- Slicing of Hamiltonian systems</a>
 							</div>
 						</div>
 					</div>
