--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 				<h5>List of publications:</h5>
 				<ol reversed class="ms-4">
 
-					<li class='mb-2'>X. Gràcia, J. de Lucas, X. Rivas and X. Rivas, "On Darboux theorems for geometric structures induced by closed forms". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2306.08556" target="_blank">2306.08556</a></li>
+					<li class='mb-2'>J. de Lucas, X. Rivas and M. Zając, "Hamiltonian stochastic Lie systems and applications". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2307.06232" target="_blank">2307.06232</a></li>
+
+					<li class='mb-2'>X. Gràcia, J. de Lucas, X. Rivas and N. Román-Roy, "On Darboux theorems for geometric structures induced by closed forms". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2306.08556" target="_blank">2306.08556</a></li>
 
 					<li class='mb-2'>X. Rivas, M. Salgado and S. Souto, "Some contributions to <em>k</em>-contact Lagrangian field equations, symmetries and dissipation laws". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2304.00833" target="_blank">2304.00833</a></li>
 
@@ -127,6 +129,7 @@
 					<li>Silvia Souto</li>
 					<li>Daniel Torres</li>
 					<li><a href="http://cud.unizar.es/svilariño" target="_blank">Silvia Vilariño</a></li>
+					<li>Marcin Zając</li>
 					<li>Bartosz M. Zawora</li>
 				</ul>
 			</div>
