--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					
 					<li class='mb-2'>M. de León, M. Lainz, A. López-Gordón and X. Rivas, "Hamilton&ndash;Jacobi theory and integrability for autonomous and non-autonomous contact systems". <em>J. Geom. Phys.</em> <strong>187</strong>:104787, 2023. arxiv: <a href="https://arxiv.org/abs/2208.07436" target="_blank">2208.07436</a> doi: <a href="https://doi.org/10.1016/j.geomphys.2023.104787" target="_blank">10.1016/j.geomphys.2023.104787</a></li>
 
-					<li class='mb-2'>J. de Lucas and X. Rivas, "Contact Lie systems: theory and applications". <em>J. Phys. A: Math. Theor.</em>, 2023. arxiv: <a href="https://arxiv.org/abs/2207.04038" target="_blank">2207.04038</a>  doi: <a href="https://doi.org/10.1088/1751-8121/ace0e7" target="_blank">10.1088/1751-8121/ace0e7</a></li>
+					<li class='mb-2'>J. de Lucas and X. Rivas, "Contact Lie systems: theory and applications". <em>J. Phys. A: Math. Theor.</em> <strong>56</strong>(33):335203, 2023. arxiv: <a href="https://arxiv.org/abs/2207.04038" target="_blank">2207.04038</a>  doi: <a href="https://doi.org/10.1088/1751-8121/ace0e7" target="_blank">10.1088/1751-8121/ace0e7</a></li>
 
 					<li class='mb-2'>X. Rivas and D. Torres, "Lagrangian&ndash;Hamiltonian formalism for cocontact systems". <em>J. Geom. Mech.</em> <strong>15</strong>(1):1-26, 2023. arxiv: <a href="https://arxiv.org/abs/2205.14757" target="_blank">2205.14757</a> doi: <a href="https://doi.org/10.3934/jgm.2023001" target="_blank">10.3934/jgm.2023001</a></li>
 
