--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 					<li class='mb-2'>J. de Lucas, X. Rivas, S. Vilariño and B. M. Zawora, "On <em>k</em>-polycosymplectic Marsden&ndash;Weinstein reductions". <em>J. Geom. Phys.</em> <strong>191</strong>:104899, 2023. arxiv: <a href="https://arxiv.org/abs/2302.09037" target="_blank">2302.09037</a> doi: <a href="https://doi.org/10.1016/j.geomphys.2023.104899" target="_blank">10.1016/j.geomphys.2023.104899</a></li>
 
-					<li class='mb-2'>J. Gaset, A. López-Gordón and X. Rivas, "Symmetries, conservation and dissipation in time-dependent contact systems". <em>Fortschr. Phys.</em> :2300048, 2023. arxiv: <a href="https://arxiv.org/abs/2212.14848" target="_blank">2212.14848</a> doi: <a href="https://doi.org/10.1002/prop.202300048" target="_blank">10.1002/prop.202300048</a></li>
+					<li class='mb-2'>J. Gaset, A. López-Gordón and X. Rivas, "Symmetries, conservation and dissipation in time-dependent contact systems". <em>Fortschr. Phys.</em> <strong>71</strong>(8-9):2300048, 2023. arxiv: <a href="https://arxiv.org/abs/2212.14848" target="_blank">2212.14848</a> doi: <a href="https://doi.org/10.1002/prop.202300048" target="_blank">10.1002/prop.202300048</a></li>
 
 					<li class='mb-2'>J. Gaset, M. Lainz, A. Mas and X. Rivas, "The Herglotz variational principle for dissipative field theories". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2211.17058" target="_blank">2211.17058</a></li>
 
